# learn-near-in-rust

./: .gitignore  Cargo.toml  README 2.md  README.md  near-meetup-example.ts  package.json
integration-test/: Cargo.toml
integration-test/src/: lib.rs  test.rs
src/: contract.rs  lib.rs
token/: build.sh
token/src/: lib.rs
vending-machine/: Cargo.toml  build.sh
vending-machine/src/: external_traits.rs  lib.rs
